[package]
name = "example_render_target"
version = "0.1.0"
authors = ["Redchards <urien.loic.cours@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.2", features = ["bundled", "static-link"] }